2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs:
	  Updated generated code.

2008-07-29  Mike Krüger <mkrueger@novell.com> 

	* WelcomePage.mdp: Removed some parts of the documentation service.

2008-07-05  Zach Lute <zach.lute@gmail.com> 

	* WelcomePageView.cs: Welcome page no longer shows 'Open solution'
	  status bar message for non-solution links.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump MD version.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageView.cs, WelcomePageOptionPanel.cs, WelcomePage.mdp,
	  Makefile.am: Add an option to disable online updating. Fixes bug
	  #323870.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageFallbackWidget.cs, WelcomePageView.cs,
	  WelcomePageBrowser.cs, gtk-gui/objects.xml: New project model
	  changes.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml, WelcomePageOptionPanel.cs: Use new options
	  dialog infrastructure.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageView.cs: Refactored status bar.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* WelcomePage.mdp, Makefile.am: Removed some unused glade and gnome-sharp
	  references (only the unused). But I'll continue to remove glade, we need
	  to lower the dependency tree a bit.

2008-02-14  Geoff Norton  <gnorton@novell.com>

	* WelcomePageView.cs: Ensure that we dont try to read more bytes
	than available from the stream.  Avoides a IndexOutOfRangeException
	on other runtimes.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* WelcomePageFallbackWidget.cs: Fixed translation bug.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 
