@@ -1,3 +1,9 @@
+2008-10-20  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* WelcomePageFallbackWidget.cs: Add error handling for recent solution
+	not existing. Fixes "Bug 437120 - Recent solutions list does not
+	handle DirectoryNotFoundException gracefully".
+
 2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* WelcomePage.mdp: Updated projects.
